# golf_rank

./: .env.example  .gitignore  .gitleaks.toml  README.md  docker-compose.yml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/frontend/: app.json  package-lock.json  package.json  tsconfig.json
apps/frontend/app/: _layout.tsx  discover.tsx  friends.tsx  home.tsx  index.tsx  notifications.tsx  (+8 more)
docs/deployment/: supabase-staging.md
docs/product/: next-features-handoff.md
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  0002_onboarding_data.py  0003_comparison_rankings.py  0004_product_domains.py  0005_rating_experience.py  0006_social_catalog.py  0007_reconciliation_source_scope.py  0008_round_history.py  0009_clean_course_names.py  0010_course_detail_enrichment.py  0011_backfill_legacy_seed_course_facts.py  0012_supabase_data_api_hardening.py  0013_canonical_course_identity.py  0014_provider_first_catalog.py  0015_ai_plan_generations.py
services/api/app/: __init__.py  catalog.py  catalog_import.py  course_ratings.py  course_reconciliation.py  db.py  domain.py  main.py  models.py  planner_narrative.py  plans.py  ranking.py  rounds.py  saves.py  schemas.py  seed.py  social.py
services/api/app/core/: __init__.py  auth.py  config.py  http_security.py  rate_limit.py  rate_limit_alerts.py
services/api/golf_rank_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/scripts/: backup_staging_data.sh  verify_staging_backup.sh
services/api/tests/: conftest.py  test_auth.py  test_catalog_import.py  test_clerk_auth.py  test_course_ratings.py  test_course_reconciliation.py  test_courses.py  test_health.py  test_models.py  test_planner_narrative.py  test_plans.py  test_profiles.py  test_rankings.py  test_rate_limit.py  test_rounds.py  test_saves.py  test_security.py  test_social.py
(+50 files in other folders)
