[project]
name = "golf-rank-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
