[project]
name = "golf-rank-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.5,<3",
    "pyjwt[crypto]>=2.8,<3",
    "httpx>=0.27,<1",
    "redis>=5,<7",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.9.4,<2",
    "pip-audit>=2.10.1,<3",
    "pytest>=9.1.1,<10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
